Fixed align of play icon on "Queue a song" button

--- a/css/invertedvideosmall.css
+++ b/css/invertedvideosmall.css
@@ -7,9 +7,10 @@
     #main_player { width: 100%; max-width: 35.6%; min-width: 450px; float: left; }
 
     /* Buttons fix */
-    #main-room .left_section #main_player .play-song-link-container { bottom: -3rem; }
+    #main-room .left_section #main_player .play-song-link-container { bottom: -3.5rem; }
     #main-room .left_section #main_player .play-song-link-container > div { border-radius: .5rem; }
     #main-room .left_section #main_player .play-song-link-container > div { width: auto; font-size: .8rem; padding: .75rem 1.5rem; }
+    #main-room .left_section #main_player .play-song-link-container .play-song-link-browser i { vertical-align: sub; }
     #main-room .left_section #main_player { padding-bottom: .5rem; }
     #main-room .left_section #main_player .player_sharing span { font-size: 1.25rem; }
     #main_player .player_header {
